examples/datalog/12_errors/16_arity_mismatch_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_arity
Knowledge graph 'test_arity' created.
Switched to knowledge graph: test_arity
> .kg use test_arity
Switched to knowledge graph: test_arity
> +edge(1, 2).
Inserted 1 fact(s) into 'edge'.
> +edge(3, 4).
Inserted 1 fact(s) into 'edge'.
> ?- edge(X, Y).
2 rows:
  (1, 2)
  (3, 4)
> +edge(5, 6, 7).
Script error: Insert failed: Arity mismatch for relation 'edge': existing arity is 2, but trying to insert tuples with arity 3
