examples/datalog/12_errors/16_arity_mismatch_error.dl
% Test: Arity mismatch error
% Category: 12_errors
% Description: Tests that inserting tuples with different arities into the same relation
%              results in an error after the first insert establishes the arity.
% Expectation: First two inserts succeed, third insert (arity 3) fails with arity mismatch error

.kg create test_arity
.kg use test_arity

% First insert: establishes edge as arity 2
+edge(1, 2).

% Second insert: same arity (should succeed)
+edge(3, 4).

% Query to verify arity-2 data
?- edge(X, Y).

% Now try to insert arity-3 into the same relation (should fail with arity error)
+edge(5, 6, 7).

% Cleanup
.kg use default
.kg drop test_arity
